# KDE-Hentai-Wallpaper-Changer

./: Cargo.toml  README.md
services/: change-wallpaper.service  change-wallpaper.timer
src/: kde.rs  konachan.rs  main.rs  notify.rs
