[package]
name = "kde-wallpaper-changer"
version = "0.1.0"
edition = "2021"
authors = ["Avimitin <avimitin@gmail.com>"]
description = "Fill your desktop with hentai images"
keywords = ["kde", "wallpaper", "hentai", "cli"]
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
default-run = "kwc"
repository = "https://github.com/Avimitin/KDE-Hentai-Wallpaper-Changer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tokio ={ version = "1.21", features = ["full"] }
anyhow = "1.0"
reqwest ={ version = "0.11", features = ["stream", "json"]}
rand = "0.8"
notify-rust = "4.5.8"
tokio-stream = "0.1.9"
serde = "1.0"
dbus = { version = "0.9.6" , features = ["futures"]}
dbus-tokio = "0.7.5"
md-5 = "0.10.4"
argh = "0.1.8"
base16ct = { version = "0.1.1", features = ["alloc"] }

[[bin]]
name = "kwc"
path = "src/main.rs"
doc = false
